--- a/author.hbs
+++ b/author.hbs
@@ -5,16 +5,7 @@
 
 {{! Everything inside the #author tags pulls data from the author }}
 {{#author}}
-    <header class="main-header author-head {{#if cover}}" style="background-image: url({{cover}}){{else}}no-cover{{/if}}">
-        <nav class="main-nav overlay clearfix">
-            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-            {{#if @blog.navigation}}
-                <a class="menu-button icon-menu" href="#"><span class="word">菜单</span></a>
-            {{/if}}
-        </nav>
-    </header>
-
-    <section class="author-profile inner">
+    <section class="author-profile inner" style="margin-top: 180px;">
         {{#if image}}
         <figure class="author-image">
             <div class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}的头像</span></div>
