--- a/default.hbs
+++ b/default.hbs
@@ -14,41 +14,58 @@
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
 
-    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+    <style type="text/css">
+
+        @media (min-width:760px) {
+            .main-content {
+                width: 90%;
+                margin: 0px auto;
+            }
+        }
+
+        .site-wrapper {
+            margin-top: 70px;
+        }
+
+    </style>
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 
 </head>
 <body class="{{body_class}} nav-closed" style="background-color:#f2f2f2;">
 
-    {{navigation}}
+{{navigation}}
 
-    <div class="site-wrapper">
+<div class="site-wrapper">
 
-        {{! Everything else gets inserted here }}
+    {{! Everything else gets inserted here }}
+    <div class="main-content">
         {{{body}}}
-
-        <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> &amp; <a href="http://www.ghostchina.com">GhostChina</a></section>
-        </footer>
-
     </div>
 
-    {{! Ghost outputs important scripts and data with this tag }}
-    {{ghost_foot}}
+    <footer class="site-footer clearfix">
+        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
+        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> &amp; <a href="http://www.ghostchina.com">GhostChina</a></section>
+    </footer>
 
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/fitvids/1.1.0/jquery.fitvids.min.js"></script>
+</div>
 
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    {{! The main JavaScript file for Casper }}
-    <script src="{{asset "js/index.js"}}"></script>
+{{! Ghost outputs important scripts and data with this tag }}
+{{ghost_foot}}
+
+<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/fitvids/1.1.0/jquery.fitvids.min.js"></script>
+
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+{{! The main JavaScript file for Casper }}
+<script src="{{asset "js/index.js"}}"></script>
 
 </body>
 </html>
