--- a/index.hbs
+++ b/index.hbs
@@ -14,7 +14,7 @@
 
         <div class="col-md-4">
             <div style="background-color: #fff;height: 1000px;">
-                侧边栏
+                <strong>{{@blog.description}}</strong>
             </div>
         </div>
     </div>
