--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -45,8 +45,11 @@
 
         <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="nav-link"><a href="{{@blog.url}}">首页</a></li>
+                {{#foreach navigation}}
+                <li class="nav-link{{#if current}} active{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
+                {{/foreach}}
             </ul>
         </div>
+
     </div>
 </nav>
