--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -211,6 +211,7 @@ h4, h5, h6 {
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     color: #2E2E2E;
     line-height: 1.15em;
+    font-weight: bold;
     margin: 0 0 0.4em 0;
     text-rendering: geometricPrecision;
 }
