--- a/default.hbs
+++ b/default.hbs
@@ -38,7 +38,7 @@
     {{ghost_head}}
 
 </head>
-<body class="{{body_class}} nav-closed" style="background-color:#f2f2f2;">
+<body class="{{body_class}} nav-closed" style="background-color:#E9EAEC;">
 
 {{navigation}}
 
