博客头像居中

--- a/partials/blog_info.hbs
+++ b/partials/blog_info.hbs
@@ -1,24 +1,19 @@
 <style type="text/css">
-    .logo-div {
-        position: relative;
-        text-align: center;
-    }
 
     .logo {
-        margin: 0px auto;
-        padding: 20px 0px;
+        margin: 25px auto;
         border-radius: 50%;
         vertical-align: middle;
-        width: 30%;
-        height: 30%;
+        width:100px;
+        height:100px;
+        background-size: cover;
+        background:url({{@blog.logo}}) no-repeat center center;
     }
 </style>
 
 <div class="card">
     <div class="card-content">
-        <div class="logo-div">
-            <img class="logo" src="{{@blog.logo}}">
-        </div>
+        <div class="logo"></div>
         <p style="text-align: center;"><strong style="color:#999">{{@blog.description}}</strong></p>
     </div>
 </div>
