1、增加“作品” 2、增加“友情链接” 3、一些样式修改

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -249,7 +249,7 @@ a {
 }
 
 a:hover {
-    color: #111;
+    color: #178fe6;
 }
 
 p, ul, ol, dl {
@@ -1371,7 +1371,7 @@ body:not(.post-template) .post-title {
 
 .site-footer {
     position: relative;
-    margin: 8rem 0 0 0;
+    margin: 3rem 0 0 0;
     padding: 1rem 15px;
     font-family: inherit;
     font-size: 1rem;
