--- a/index.hbs
+++ b/index.hbs
@@ -33,6 +33,12 @@
             {{! 标签云 }}
             {{tag_cloud}}
 
+            {{! 作品 }}
+            {{>product}}
+
+            {{! 友情链接 }}
+            {{>flink}}
+
         </div>
 
         <div class="col-md-8">
