--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,6 +1,23 @@
 {{! This is the post loop - each post will be output using this markup }}
+
+<style type="text/css">
+    .post-pic {
+        float: left;
+        margin-right: 20px;
+        width: 165px;
+        height: 120px;
+        background: no-repeat center center;
+        background-size: cover;
+    }
+</style>
+
 {{#foreach posts}}
 <article class="{{post_class}}">
+    {{!有封面的时候展示封面}}
+    {{#if image}}
+    <a class="post-pic hidden-xs" href="{{url}}" style="background-image: url({{image}});"></a>
+    {{/if}}
+
     <header class="post-header">
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
     </header>
@@ -13,6 +30,7 @@
         {{tags prefix=" 标签："}}
         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY年MM月DD日"}}</time>
     </footer>
+
 </article>
 {{/foreach}}
 
