--- a/index.hbs
+++ b/index.hbs
@@ -5,6 +5,12 @@
 
 <style type="text/css">
 
+    .label-primary {
+        filter:alpha(opacity=70);
+        -moz-opacity:0.7;
+        opacity:0.7;
+    }
+
     @media (max-width:500px) {
 
         .post {
