修改底色，对比度高一些

--- a/default.hbs
+++ b/default.hbs
@@ -38,7 +38,11 @@
     {{ghost_head}}
 
 </head>
-<body class="{{body_class}} nav-closed" style="background-color:#E9EAEC;">
+
+<!--#E9EAEC-->
+<!--#EDECE4-->
+
+<body class="{{body_class}} nav-closed" style="background-color:#EDECE4;">
 
 {{navigation}}
 
