--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -975,7 +975,7 @@ body:not(.post-template) .post-title {
    to be flexible at smaller screen sizes while the share
    links remain at a fixed width the whole time */
 .post-footer .share {
-    position: absolute;
+    /*position: absolute;*/
     top: 6rem;
     right: 0;
     width: 230px;
