--- a/post.hbs
+++ b/post.hbs
@@ -62,39 +62,16 @@
 
                     <footer class="post-footer">
 
-                        <!--{{! Everything inside the #author tags pulls data from the author }}-->
-                        <!--{{#author}}-->
-
-                            <!--{{#if image}}-->
-                                <!--<figure class="author-image">-->
-                                    <!--<a class="img" href="{{url}}" style="background-image: url({{image}})"><span class="hidden">{{name}}的头像</span></a>-->
-                                <!--</figure>-->
-                            <!--{{/if}}-->
-
-                            <!--<section class="author">-->
-                                <!--<h4><a href="{{url}}">{{name}}</a></h4>-->
-
-                                <!--{{#if bio}}-->
-                                    <!--<p>{{bio}}</p>-->
-                                <!--{{else}}-->
-                                    <!--<p>继续阅读此作者的<a href="{{url}}">更多文章</a>。</p>-->
-                                <!--{{/if}}-->
-                                <!--<div class="author-meta">-->
-                                    <!--{{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}-->
-                                    <!--{{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}-->
-                                <!--</div>-->
-                            <!--</section>-->
-
-                        <!--{{/author}}-->
-
-                        <section class="share">
-                            <h4>分享此博文</h4>
-                            {{! 以下代码使用的是百度分享(http://share.baidu.com/)，如需自定义，请自行到百度分享上定制并将代码粘贴到这里。}}
-                            <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_douban" data-cmd="douban" title="分享到豆瓣网"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a></div>
-                            <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-                            {{! 百度分享代码结束}}
+                        <section>
+                            <h4>
+                                <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" >
+                                    版权申明：署名-非商业性使用-禁止演绎 3.0 (CC BY-NC-ND 3.0)</strong>
+                                </a>
+                            </h4>
+                            <br>
                         </section>
 
+                        <!-- 多说评论 -->
                         <section class="post-comments">
                             <div class="ds-thread" data-thread-key="{{slug}}" data-title="{{{title}}}" data-url="{{url absolute="true"}}"></div>
                         </section>
@@ -104,29 +81,10 @@
                 </article>
             </main>
 
-            <!--<aside class="read-next">-->
-                <!--{{#next_post}}-->
-                    <!--<a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">-->
-                        <!--<section class="post">-->
-                            <!--<h2>{{title}}</h2>-->
-                            <!--<p>{{excerpt words="19"}}&hellip;</p>-->
-                        <!--</section>-->
-                    <!--</a>-->
-                <!--{{/next_post}}-->
-                <!--{{#prev_post}}-->
-                    <!--<a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">-->
-                        <!--<section class="post">-->
-                            <!--<h2>{{title}}</h2>-->
-                            <!--<p>{{excerpt words="19"}}&hellip;</p>-->
-                        <!--</section>-->
-                    <!--</a>-->
-                <!--{{/prev_post}}-->
-            <!--</aside>-->
-
         {{/post}}
 
 
-        <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+        <!-- 多说公共JS代码 start -->
         <script type="text/javascript">
             var duoshuoQuery = {short_name:"coderdidi"};
             (function() {
@@ -149,9 +107,11 @@
         {{!标签云}}
         {{tag_cloud}}
 
-
     </div>
 
 
 </div>
+
+<!-- 百度分享 -->
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"slide":{"type":"slide","bdImg":"8","bdPos":"left","bdTop":"135.5"},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"24"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 
