--- a/index.hbs
+++ b/index.hbs
@@ -45,6 +45,9 @@
             {{! 友情链接 }}
             {{>flink}}
 
+            {{!阿里云广告}}
+            {{>adv_1}}
+
         </div>
 
         <div class="col-md-8">
