--- a/post.hbs
+++ b/post.hbs
@@ -37,7 +37,6 @@
         transition: all .2s ease-in-out;
     }
 
-
 </style>
 
 
@@ -59,6 +58,9 @@
                     <section class="post-content">
                         {{content}}
                     </section>
+
+                    {{!阿里云广告}}
+                    {{>adv_3}}
 
                     <footer class="post-footer">
 
@@ -106,6 +108,9 @@
 
         {{!标签云}}
         {{tag_cloud}}
+
+        {{!阿里云广告}}
+        {{>adv_2}}
 
     </div>
 
