--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     {{! Styles'n'Scripts }}
 
