导航中增加spring-boot教程的链接

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -62,6 +62,9 @@
                         <a href="{{url absolute="true"}}">{{label}}</a>
                     </li>
                 {{/foreach}}
+                <li class="nav-link{{#if current}} active{{/if}}" role="presentation">
+                    <a href="http://blog.didispace.com/book/springboot/">SpringBoot教程</a>
+                </li>
             </ul>
         </div>
     </div>
