--- a/partials/product.hbs
+++ b/partials/product.hbs
@@ -6,6 +6,7 @@
     <div class="card-content">
         <ul>
             <li><a href="http://www.baimaozixun.com/" target="_blank">白猫计划资讯站</a></li>
+            <li><a href="http://blog.didispace.com/book/springboot/"  target="_blank">Spring Boot教程</a></li>
         </ul>
     </div>
 </div>
