样式优化，移动端取消展示一些内容

--- a/partials/flink.hbs
+++ b/partials/flink.hbs
@@ -7,14 +7,14 @@
 
 </style>
 
-<div class="card">
+<div class="card hidden-xs">
     <div class="card-title">
         <h4>友情链接</h4>
     </div>
     <div class="card-content">
         <ul>
+            <li><a href="http://blog.didispace.com/" target="_blank">程序猿DD</a></li>
             <li><a href="http://www.ghostchina.com/" target="_blank">Ghost中国</a></li>
-            <li><a href="http://www.oschina.net/" target="_blank">开源中国</a></li>
             <li><a href="https://ghost.org/" target="_blank">Ghost Blog</a></li>
         </ul>
     </div>
