--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -63,7 +63,7 @@
                     </li>
                 {{/foreach}}
                 <li class="nav-link{{#if current}} active{{/if}}" role="presentation">
-                    <a href="http://blog.didispace.com/book/springboot/">SpringBoot教程</a>
+                    <a href="http://blog.didispace.com/book/springboot/" target="_blank">SpringBoot教程</a>
                 </li>
             </ul>
         </div>
