--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -723,26 +723,27 @@ body.nav-opened .site-wrapper {
     word-wrap: break-word;
     padding:30px;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+    /*box-shadow: 0 1px 2px rgba(0,0,0,0.05);*/
+    box-shadow: 0 1px 3px rgba(0,0,0,0.3);
     border-radius: 2px;
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
-.post:after {
-    display: block;
-    content: "";
-    width: 7px;
-    height: 7px;
-    border: #E7EEF2 1px solid;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    margin-left: -5px;
-    background: #FFF;
-    border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px;
-}
+/*.post:after {*/
+    /*display: block;*/
+    /*content: "";*/
+    /*width: 7px;*/
+    /*height: 7px;*/
+    /*border: #E7EEF2 1px solid;*/
+    /*position: absolute;*/
+    /*bottom: -5px;*/
+    /*left: 50%;*/
+    /*margin-left: -5px;*/
+    /*background: #FFF;*/
+    /*border-radius: 100%;*/
+    /*box-shadow: #FFF 0 0 0 5px;*/
+/*}*/
 
 body:not(.post-template) .post-title {
     font-size: 2.5rem;
@@ -1840,7 +1841,8 @@ body:not(.post-template) .post-title {
     word-wrap: break-word;
     padding: 0px;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+    /*box-shadow: 0 1px 2px rgba(0,0,0,0.05);*/
+    box-shadow: 0 1px 3px rgba(0,0,0,0.3);
     border-radius: 2px;
     margin-bottom: 1em;
 }
