--- a/partials/product.hbs
+++ b/partials/product.hbs
@@ -1,7 +1,7 @@
 
 <div class="card hidden-xs">
     <div class="card-title">
-        <h4>作品</h4>
+        <h4><i class="fa fa-th-large">&nbsp;</i>作品</h4>
     </div>
     <div class="card-content">
         <ul>
