--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -5,7 +5,7 @@
         float: left;
         margin-right: 20px;
         width: 165px;
-        height: 120px;
+        height: 140px;
         background: no-repeat center center;
         background-size: cover;
     }
@@ -27,7 +27,8 @@
     <footer class="post-meta">
         {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
         {{author}}
-        {{tags prefix=" 标签："}}
+        <!--{{tags prefix=" 标签："}}-->
+        {{tags prefix="&nbsp;<i class=\"fa fa-tags\"></i>&nbsp;"}}
         <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY年MM月DD日"}}</time>
     </footer>
 
