--- a/partials/tag_cloud.hbs
+++ b/partials/tag_cloud.hbs
@@ -1,7 +1,7 @@
 
 <div class="card hidden-xs">
     <div class="card-title">
-        <h4>标签云</h4>
+        <h4><i class="fa fa-tags">&nbsp;</i>标签云</h4>
     </div>
     <div class="card-content">
         {{#foreach tags}}
