--- a/default.hbs
+++ b/default.hbs
@@ -82,10 +82,9 @@
 {{ghost_foot}}
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/fitvids/1.1.0/jquery.fitvids.min.js"></script>
-<script src="//cdn.bootcss.com/scrollup/2.4.0/jquery.scrollUp.min.js"></script>
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-{{! The main JavaScript file for Casper }}
+<script src="//cdn.bootcss.com/scrollup/2.4.0/jquery.scrollUp.min.js"></script>
+<script src="{{asset "js/jquery.infinitescroll.min.js"}}"></script>
 <script src="{{asset "js/index.js"}}"></script>
 
 </body>
