去掉广告信息

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -58,11 +58,9 @@
             bufferPx: 5,
             extraScrollPx: 50,
             loading: {
-                img: null,
-                msg: null,
                 speed: 'fast',
                 selector: null,
-                msgText: '<div class="post-loading"><i class="fa fa-spinner fa-spin fa-2x"></i></div>',
+                msgText: '加载中...',
                 finishedMsg:'<div class="post-loading">没有更多了</div>'
             }
         });
