--- a/post.hbs
+++ b/post.hbs
@@ -60,14 +60,14 @@
                     </section>
 
                     {{!阿里云广告}}
-                    {{>adv_3}}
+                    <!--{{>adv_3}}-->
 
                     <footer class="post-footer">
 
                         <section>
                             <h4>
                                 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" >
-                                    版权申明：署名-非商业性使用-禁止演绎 3.0 (CC BY-NC-ND 3.0)</strong>
+                                    <strong>版权申明：署名-非商业性使用-禁止演绎 3.0 (CC BY-NC-ND 3.0)</strong>
                                 </a>
                             </h4>
                             <br>
@@ -110,7 +110,7 @@
         {{tag_cloud}}
 
         {{!阿里云广告}}
-        {{>adv_2}}
+        <!--{{>adv_2}}-->
 
     </div>
 
