修改多说的short_name

--- a/post.hbs
+++ b/post.hbs
@@ -105,7 +105,7 @@
 
 <!-- 多说公共JS代码 start -->
 <script type="text/javascript">
-    var duoshuoQuery = {short_name:"coderdidi"};
+    var duoshuoQuery = {short_name:"请填写您自己的多说shortname"};
     (function() {
         var ds = document.createElement('script');
         ds.type = 'text/javascript';ds.async = true;
